--- a/sonarqube/sonarqubespring/azure-pipelines.yaml
+++ b/sonarqube/sonarqubespring/azure-pipelines.yaml
@@ -9,7 +9,7 @@ steps:
 - task: SonarQubePrepare@4
   displayName: Prepare Analysis Configuration task
   inputs:
-    SonarQube: 'SonarQube'
+    SonarQube: 'Sonar-aws'
     scannerMode: 'Other'
     extraProperties: |
       sonar.projectVersion=1.0.0.0
